--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header></header>
     <main>
         <h1>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            heading h1
         </h1>
     </main>
     <footer></footer>
