heading updatedsecond time locally

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header></header>
     <main>
         <h1>
-            heading
+            heading one
         </h1>
     </main>
     <footer></footer>
