added styles for heading

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header></header>
     <main>
-        <h1>
-            heading one
+        <h1 style="color:red;">
+            heading one.
         </h1>
     </main>
     <footer></footer>
